--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,19 +1,3 @@
-/* .auth-form {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: url('../images/backgrounds/not-found.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-} */
-
 .auth-form {
     position: absolute;
     top: 25px;
@@ -21,7 +5,7 @@
     left: 0;
     right: 0;
     transition: 500ms;
-    width: 450px;
+    width: 370px;
     z-index: 1;
 }
 
@@ -30,11 +14,62 @@
     padding: 30px 20px;
     border-radius: 15px;
     margin: auto;
-    box-shadow: 0px 0px 20px 5px #000000;
+    box-shadow: 0px 0px 20px 5px #141313;
 }
 
-.auth-form input[type="checkbox"] {
+.auth-form .form .checkbox {
+    position: relative;
+    width: 16px;
+    height: 16px;
+}
+
+.auth-form .form .checkbox .check {
     cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 0;
+    width: 0;
+    opacity: 0;
+}
+
+.auth-form .form .checkbox .checkmark {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: #eee;
+    border-radius: 3px;
+    z-index: 1;
+}
+
+.auth-form .form .checkbox input:checked ~ .checkmark {
+    background-color: #50B5FF;
+}
+
+.auth-form .form .checkbox input:checked ~ .checkmark::after {
+    display: block;
+}
+
+.auth-form .form .checkbox .checkmark:hover {
+    background-color: #aaa;
+}
+
+.auth-form .form .checkbox .checkmark::after {
+    position: absolute;
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    content: '';
+    background-image: url('../images/check-mark.png');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .auth-form .heading {
@@ -73,7 +108,7 @@
 }
 
 .auth-form .form label {
-    font-size: .85rem;
+    font-size: 14px;
 }
 
 .auth-form .form .field-wrap {
@@ -138,10 +173,12 @@
 
 .auth-form .form .remember .check {
     margin-right: 10px;
+    z-index: 2;
 }
 
 .auth-form .form .remember .remember-me {
     user-select: none;
+    margin-left: 10px;
 }
 
 .auth-form .form .re-captcha {
