--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto:wght@400;500;700&display=swap');
 @import './slick-slider.css';
 @import './auth.css';
 
@@ -212,6 +211,20 @@ fieldset {
     margin-left: 15px;
 }
 
+.home .nav .nav-wrap {
+    position: relative;
+}
+
+.home .nav .nav-gray-line {
+    width: 100%;
+    height: 1px;
+    background-color: #232020;
+    opacity: .9;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
 .home .forgot-password-modal {
     transition: 500ms;
     position: absolute;
@@ -420,7 +433,7 @@ fieldset {
 
 .home .slider .pop-product {
     padding: 1rem;
-    width: 18vw;
+    width: 240px;
     position: relative;
     z-index: -2;
     font-family: Roboto, sans-serif;
@@ -466,7 +479,7 @@ fieldset {
 }
 
 .home .advantages .advantage {
-    flex-basis: 30%;
+    flex-basis: 32%;
     margin: 30px auto 0 auto;
     position: relative;
     padding: 40px 30px 50px 30px;
@@ -551,9 +564,19 @@ fieldset {
 }
 
 .home .footer-wrap {
+    position: relative;
+}
+
+.home .footer-wrap .footer-bg {
     background-image: url('../images/backgrounds/footer.jpg');
-    background-position: top center;
+    background-position: center bottom;
     background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 .home .footer-wrap .instruction {
@@ -683,6 +706,13 @@ fieldset {
         margin: 100px auto 0 auto;
         transform: rotate(90deg);
     }
+}
+
+.home .footer-wrap .footer-gray-line {
+    width: 100%;
+    height: 1px;
+    background-color: #232020;
+    opacity: .9;
 }
 
 .home .footer {
@@ -895,6 +925,16 @@ fieldset {
 
 .dashboard .nav .user-menu .dropdown a:hover {
     color: #fff;
+}
+
+.dashboard .change-password {
+    max-width: 370px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    top: 25px;
+    transition: 200ms;
 }
 
 .dashboard .main {
@@ -1210,16 +1250,6 @@ fieldset {
 
 .dashboard .main .lobby .dashboard-slider {
     margin-top: 30px;
-}
-
-.dashboard .main .change-password {
-    position: absolute;
-    top: 25px;
-    right: 0;
-    left: 0;
-    margin: 0 auto;
-    width: 370px;
-    transition: 200ms;
 }
 
 .dashboard .main .lobby .popular-products {
@@ -2035,7 +2065,6 @@ fieldset {
     }
     .home .nav .container .container {
         flex-direction: column;
-        padding-bottom: 100px;
     }
     .home .nav .gray-line {
         height: 0;
