--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1246,6 +1246,7 @@ fieldset {
     margin: auto;
     left: 8px;
     right: 0;
+    cursor: pointer;
 }
 
 .dashboard .main .lobby .dashboard-slider {
@@ -1301,7 +1302,7 @@ fieldset {
 }
 
 .dashboard .main .products {
-    margin-top: 30px;
+    margin-top: 60px;
     padding-bottom: 60px;
 }
 
@@ -1312,19 +1313,33 @@ fieldset {
 }
 
 .dashboard .main .products .product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     flex-basis: 30%;
     background-color: #1C1C24;
-    padding: 20px;
+    padding: 150px 20px 20px;
     border-radius: 10px;
-    margin: 30px auto 0 auto;
+    margin: 150px auto 60px auto;
+    position: relative;
+    flex-basis: 32%;
+}
+
+.dashboard .main .products .product:nth-last-child(-n+3) {
+    margin: 150px auto 0 auto;
 }
 
 .dashboard .main .products .product .cover {
-    width: 100%;
+    width: 90%;
     height: 300px;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: absolute;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    top: -150px;
 }
 
 .dashboard .main .products .product .product-title {
