--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1750,6 +1750,7 @@ fieldset {
     margin: auto 0;
     z-index: -1;
     filter: grayscale(100%);
+    height: 100%;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions {
