--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1170,6 +1170,7 @@ fieldset {
     margin: auto 0;
     z-index: -1;
     filter: grayscale(100%);
+    height: 100%;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions {
