--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -580,6 +580,16 @@ fieldset {
     z-index: -1;
 }
 
+.home .footer-wrap .footer-bottom-bg {
+    position: absolute;
+    background-image: url('../images/backgrounds/footer-bottom.png');
+    background-position: center center;
+    width: 100%;
+    height: 350px;
+    bottom: 0;
+    left: 0;
+}
+
 .home .footer-wrap .instruction {
     text-align: center;
     width: 100%;
