--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -483,11 +483,12 @@ fieldset {
     margin: 30px auto 0 auto;
     position: relative;
     padding: 40px 30px 50px 30px;
+    z-index: 2;
 }
 
 .home .advantages .advantage .advantage-title {
     letter-spacing: 1px;
-    font-size: 1.3rem;
+    font-size: 18px;
     margin-top: 20px;
     color: #ffffff;
     font-weight: 700;
@@ -509,14 +510,11 @@ fieldset {
     position: absolute;
     top: 35px;
     right: 10px;
+    z-index: -1;
 }
 
 .home .advantages .advantage3 .character {
     right: -15px;
-}
-
-.home .advantages .advantage4 .character {
-    right: 50px;
 }
 
 .home .advantages .advantage5 .character {
@@ -547,7 +545,7 @@ fieldset {
     background-size: cover;
     background-image: url('../images/backgrounds/advantages-odd.jpg');
     opacity: .05;
-    z-index: -2;
+    z-index: -3;
 }
 
 .home .advantages .advantage .even-bg {
@@ -560,7 +558,7 @@ fieldset {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -1;
+    z-index: -2;
 }
 
 .home .footer-wrap {
