--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -88,14 +88,17 @@
   \*******************************************************************************/
 .slider {
     position: relative;
-    max-width: 1080px;
-    margin: 50px auto 0 auto;
+    margin-top: 50px;
 }
 
 .slider .slick-track {
     margin-left: auto;
     margin-right: auto;
     cursor: grab;
+}
+
+.slider .slick-list {
+    width: 1170px;
 }
 
 .slider .slick-arrow {
@@ -143,11 +146,11 @@
     margin-right: -3vw;
 }
 
-.slider .slick-slide {
+/* .slider .slick-slide {
     display: flex !important;
     justify-content: center;
     margin: 0 auto;
-}
+} */
 
 .popular-products-slider {
     margin-top: 30px;
@@ -615,7 +618,7 @@ fieldset {
 }
 
 .container {
-    max-width: 1180px;
+    max-width: 1170px;
     width: auto;
     margin: 0 auto;
     padding: 0 15px;
@@ -1013,7 +1016,7 @@ fieldset {
 
 .home .slider .pop-product {
     padding: 1rem;
-    width: 255px;
+    width: 270px;
     position: relative;
     z-index: -2;
     font-family: Roboto, sans-serif;
@@ -1084,7 +1087,24 @@ fieldset {
     font-family: "Roboto", sans-serif;
     display: inline-block;
     margin-top: 25px;
-} 
+    max-width: 300px;
+}
+
+.home .advantages .advantage2 .content {
+    max-width: 270px;
+}
+
+.home .advantages .advantage3 .content {
+    max-width: 270px;
+}
+
+.home .advantages .advantage4 .content {
+    max-width: 250px;
+}
+
+.home .advantages .advantage5 .content {
+    max-width: 280px;
+}
 
 .home .advantages .advantage .character {
     position: absolute;
@@ -1281,6 +1301,14 @@ fieldset {
     text-transform: uppercase;
     margin-top: 30px;
     width: 100%;
+}
+
+.home .steps .step3 .to-do {
+    max-width: 200px;
+}
+
+.home .steps .step4 .to-do {
+    max-width: 150px;
 }
 
 @media (max-width: 550px) {
@@ -1525,6 +1553,33 @@ fieldset {
     margin: 0 auto;
     top: 25px;
     transition: 200ms;
+    padding: 30px 30px 40px;
+    background-color: #1C1C24;
+    border-radius: 20px;
+    z-index: 1;
+}
+
+.dashboard .change-password .heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dashboard .change-password .heading h2 {
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 600;
+    letter-spacing: .1px;
+}
+
+.dashboard .change-password .heading .close-modal {
+    fill: #1E75FF;
+    cursor: pointer;
+}
+
+.dashboard .change-password .form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
 }
 
 .dashboard .main {
