--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,7 +35,7 @@ fieldset {
 }
 
 .container {
-    max-width: 1180px;
+    max-width: 1170px;
     width: auto;
     margin: 0 auto;
     padding: 0 15px;
@@ -433,7 +433,7 @@ fieldset {
 
 .home .slider .pop-product {
     padding: 1rem;
-    width: 255px;
+    width: 270px;
     position: relative;
     z-index: -2;
     font-family: Roboto, sans-serif;
@@ -504,7 +504,24 @@ fieldset {
     font-family: "Roboto", sans-serif;
     display: inline-block;
     margin-top: 25px;
-} 
+    max-width: 300px;
+}
+
+.home .advantages .advantage2 .content {
+    max-width: 270px;
+}
+
+.home .advantages .advantage3 .content {
+    max-width: 270px;
+}
+
+.home .advantages .advantage4 .content {
+    max-width: 250px;
+}
+
+.home .advantages .advantage5 .content {
+    max-width: 280px;
+}
 
 .home .advantages .advantage .character {
     position: absolute;
@@ -701,6 +718,14 @@ fieldset {
     text-transform: uppercase;
     margin-top: 30px;
     width: 100%;
+}
+
+.home .steps .step3 .to-do {
+    max-width: 200px;
+}
+
+.home .steps .step4 .to-do {
+    max-width: 150px;
 }
 
 @media (max-width: 550px) {
@@ -945,6 +970,33 @@ fieldset {
     margin: 0 auto;
     top: 25px;
     transition: 200ms;
+    padding: 30px 30px 40px;
+    background-color: #1C1C24;
+    border-radius: 20px;
+    z-index: 1;
+}
+
+.dashboard .change-password .heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dashboard .change-password .heading h2 {
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 600;
+    letter-spacing: .1px;
+}
+
+.dashboard .change-password .heading .close-modal {
+    fill: #1E75FF;
+    cursor: pointer;
+}
+
+.dashboard .change-password .form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
 }
 
 .dashboard .main {
