--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1247,6 +1247,7 @@ fieldset {
     width: 100%;
     height: 100%;
     opacity: .4;
+    z-index: -1;
 }
 
 .home .steps .step .step-bg .character {
