--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -147,9 +147,6 @@
 }
 
 /* .slider .slick-slide {
-    display: flex !important;
-    justify-content: center;
-    margin: 0 auto;
 } */
 
 .popular-products-slider {
@@ -1017,6 +1014,7 @@ fieldset {
 .home .slider .pop-product {
     padding: 1rem;
     width: 270px;
+    height: 360px;
     position: relative;
     z-index: -2;
     font-family: Roboto, sans-serif;
@@ -1087,19 +1085,6 @@ fieldset {
     font-family: "Roboto", sans-serif;
     display: inline-block;
     margin-top: 25px;
-    max-width: 300px;
-}
-
-.home .advantages .advantage2 .content {
-    width: 280px;
-}
-
-.home .advantages .advantage3 .content {
-    min-width: 100%;
-}
-
-.home .advantages .advantage4 .content {
-    max-width: 275px;
 }
 
 .home .advantages .advantage5 .content {
@@ -1291,7 +1276,6 @@ fieldset {
     line-height: 72px;
     color: #fa0707;
     font-family: "Roboto", sans-serif;
-    margin-top: 40px;
 }
 
 .home .steps .to-do {
@@ -1301,7 +1285,6 @@ fieldset {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     text-transform: uppercase;
-    margin-top: 30px;
     width: 100%;
 }
 
@@ -1558,7 +1541,7 @@ fieldset {
     left: 0;
     margin: 0 auto;
     top: 25px;
-    transition: 200ms;
+    transition: 400ms;
     padding: 30px 30px 40px;
     background-color: #1C1C24;
     border-radius: 20px;
@@ -1586,6 +1569,29 @@ fieldset {
     margin-top: 30px;
     display: flex;
     flex-direction: column;
+}
+
+.dashboard .change-password .form .field-wrap + .field-wrap {
+    margin-top: 20px;
+}
+
+.dashboard .change-password .form .field-wrap label {
+    color: #92929D;
+    font-family: Roboto, sans-serif;
+    letter-spacing: .1px;
+}
+
+.dashboard .change-password .form .change-password-submit {
+    border: none;
+    border-radius: 10px;
+    background-color: #1E75FF;
+    font-size: 12px;
+    color: #FAFAFB;
+    line-height: 18px;
+    font-weight: 600;
+    margin-top: 20px;
+    padding: 15px 0;
+    cursor: pointer;
 }
 
 .dashboard .main {
