homepage is finished

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -432,7 +432,7 @@ fieldset {
 }
 
 .home .slider .pop-product {
-    padding: 1rem;
+    padding: 40px;
     width: 270px;
     height: 360px;
     position: relative;
