--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -46,7 +46,7 @@
     background-image: url('../images/arrow-left.png');
     background-repeat: no-repeat;
     background-position: 51% center;
-    margin-left: -3vw;
+    margin-left: -50px;
 }
 
 .slider .slick-arrow.slick-next {
@@ -55,7 +55,7 @@
     background-image: url('../images/arrow-right.png');
     background-repeat: no-repeat;
     background-position: 57% center;
-    margin-right: -3vw;
+    margin-right: -60px;
 }
 
 /* .slider .slick-slide {
