--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -272,13 +272,16 @@
   \***********************************************************************/
 .auth-form {
     position: absolute;
-    top: 25px;
-    margin: 0 auto;
+    top: 0;
+    margin: auto;
     left: 0;
     right: 0;
+    bottom: 0;
     transition: 500ms;
     width: 370px;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .home .auth-form .container {
@@ -287,6 +290,7 @@
     border-radius: 15px;
     margin: auto;
     box-shadow: 0px 0px 20px 5px #141313;
+    width: 370px;
 }
 
 .auth-form .form .checkbox {
@@ -577,6 +581,9 @@
     .auth-form {
         width: 95%;
     }
+    .home .auth-form .container {
+        width: 95%;
+    }
 }
 
 /*!****************************************************************************!*\
@@ -603,6 +610,8 @@ body {
     height: 100%;
     font-weight: 400;
     background-color: #020100;
+    scrollbar-width: thin;
+    scrollbar-color: blue orange;
 }
 
 fieldset {
@@ -808,10 +817,12 @@ fieldset {
 .home .forgot-password-modal {
     transition: 500ms;
     position: absolute;
-    top: 25px;
+    top: 0;
     right: 0;
     left: 0;
-    margin: 0 auto;
+    bottom: 0;
+    max-height: 320px;
+    margin: auto;
     z-index: 1;
     max-width: 370px;
     padding: 30px 30px 35px;
