--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,12 +1,15 @@
 .auth-form {
     position: absolute;
-    top: 25px;
-    margin: 0 auto;
+    top: 0;
+    margin: auto;
     left: 0;
     right: 0;
+    bottom: 0;
     transition: 500ms;
     width: 370px;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .home .auth-form .container {
@@ -15,6 +18,7 @@
     border-radius: 15px;
     margin: auto;
     box-shadow: 0px 0px 20px 5px #141313;
+    width: 370px;
 }
 
 .auth-form .form .checkbox {
@@ -303,6 +307,9 @@
 
 @media (max-width: 500px) {
     .auth-form {
+        width: 95%;
+    }
+    .home .auth-form .container {
         width: 95%;
     }
 }
