labels on the modal forms trying improved

--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -409,7 +409,7 @@
     align-items: center;
     line-height: 40px;
     pointer-events: none;
-    background: transparent;
+    background: none;
     transition: 300ms;
     padding: 0;
     transform: translateX(0) translateY(0);
@@ -1550,13 +1550,16 @@ fieldset {
     position: absolute;
     right: 0;
     left: 0;
-    margin: 0 auto;
-    top: 25px;
-    transition: 400ms;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    transition: 500ms;
     padding: 30px 30px 40px;
     background-color: #1C1C24;
     border-radius: 20px;
     z-index: 1;
+    max-height: 350px;
+    box-shadow: 0px 0px 20px 5px #141313;
 }
 
 .dashboard .change-password .heading {
@@ -1996,7 +1999,7 @@ fieldset {
     border-radius: 10px;
     margin: 150px auto 60px auto;
     position: relative;
-    flex-basis: 31.5%;
+    flex-basis: 32%;
 }
 
 .dashboard .main .products .product:nth-last-child(-n+3) {
@@ -2019,6 +2022,9 @@ fieldset {
 .dashboard .main .products .product .product-title {
     margin-top: 20px;
     font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .products .product .description {
@@ -2051,6 +2057,7 @@ fieldset {
     display: flex;
     justify-content: center;
     color: #FAFAFB;
+    line-height: 18px;
 }
 
 .dashboard .main .product-info {
@@ -2233,6 +2240,7 @@ fieldset {
     letter-spacing: .1px;
     color: #B5B5BE;
     margin-top: 10px;
+    font-family: Roboto, sans-serif;
 }
 
 .dashboard .main .product-info .product .general .characteristics h4 {
