--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -103,7 +103,6 @@
     color: #f00;
     display: flex;
     justify-content: center;
-    font-size: .7rem;
     transition: 100ms;
     max-width: 100%;
     text-align: center;
@@ -147,7 +146,7 @@
 .auth-form .form .field-wrap .field {
     width: 100%;
     padding: 10px 15px;
-    background: #292932;
+    background-color: #292932;
     border: 1px solid transparent;
     border-radius: 10px;
     color: #fff;
