--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1557,8 +1557,23 @@ fieldset {
     background-color: #1C1C24;
     border-radius: 20px;
     z-index: 1;
-    max-height: 350px;
+    height: 370px;
     box-shadow: 0px 0px 20px 5px #141313;
+}
+
+.dashboard .password-changed-notif {
+    position: absolute;
+    top: 25px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    margin: 0 auto;
+    transition: 200ms;
+    box-shadow: 0px 0px 15px 5px #141313;
+    background-color: #1C1C24;
+    border-radius: 10px;
+    padding: 30px;
+    width: 500px;
 }
 
 .dashboard .change-password .heading {
@@ -1909,6 +1924,7 @@ fieldset {
     z-index: -1;
     filter: grayscale(100%);
     height: 100%;
+    user-select: none;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions {
