--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -2164,7 +2164,7 @@ fieldset {
 }
 
 .dashboard .main .product-info .info {
-    width: 70%;
+    width: 770px;
 }
 
 .dashboard .main .product-info .info .general {
@@ -2498,7 +2498,7 @@ fieldset {
 }
 
 .dashboard .main .product-info .popular-products .popular-product {
-    width: 85%;
+    width: 330px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2583,7 +2583,7 @@ fieldset {
 }
 
 .dashboard .main .FAQ .search-bar .categories {
-    min-width: 30%;
+    width: 330px;
 }
 
 .dashboard .main .FAQ .search-bar .categories .first-category {
