--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -146,12 +146,10 @@
     margin-right: -60px;
 }
 
-/* .slider .slick-slide {
-} */
-
 .popular-products-slider {
     margin-top: 30px;
     padding-bottom: 60px;
+    min-height: 500px;
 }
 
 .popular-products-slider .slick-list {
@@ -183,6 +181,8 @@
 .popular-products-slider .slick-slide {
     padding-top: 100px;
     width: 370px;
+    min-height: 500px;
+    margin-top: 24px;
 }
 
 .popular-products-slider .slick-arrow.slick-prev {
@@ -208,6 +208,7 @@
     right: 0;
     margin: 0 auto;
     height: 300px;
+    width: 100%;
 }
 
 .popular-products-slider .popular-product {
@@ -244,7 +245,7 @@
     justify-content: space-between;
 }
 
-.popular-products-slider .popular-product .buttons a {
+.popular-products-slider .popular-product .buttons .button {
     display: flex;
     justify-content: center;
     font-size: 12px;
@@ -257,15 +258,12 @@
     padding: 10px 0;
     color: #fff;
     font-weight: 600;
+    cursor: pointer;
 }
 
-.popular-products-slider .popular-product .buttons a:first-of-type {
+.popular-products-slider .popular-product .buttons button:first-of-type {
     background-color: #1E75FF;
 }
-
-/* .popular-products-slider .popular-product .buttons a + a {
-    margin-left: 10px;
-} */
 
 /*!***********************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/auth.css ***!
@@ -828,6 +826,7 @@ fieldset {
     background-color: #1C1C24;
     border-radius: 20px;
     box-shadow: 0px 0px 20px 5px #000000;
+    transform: translateY(-170%);
 }
 
 .home .forgot-password-modal .heading {
@@ -1559,6 +1558,7 @@ fieldset {
     z-index: 1;
     height: 370px;
     box-shadow: 0px 0px 20px 5px #141313;
+    transform: translateY(-170%);
 }
 
 .dashboard .password-changed-notif {
@@ -2129,11 +2129,11 @@ fieldset {
     color: #FAFAFB;
 }
 
-.dashboard .main .products .product .buttons a:first-of-type {
+.dashboard .main .products .product .buttons button:first-of-type {
     background-color: #1E75FF;
 }
 
-.dashboard .main .products .product .buttons a {
+.dashboard .main .products .product .buttons .button {
     border-radius: 10px;
     width: 45%;
     padding: 10px 0;
@@ -2142,7 +2142,12 @@ fieldset {
     display: flex;
     justify-content: center;
     color: #FAFAFB;
+    font-family: Roboto, sans-serif;
     line-height: 18px;
+    cursor: pointer;
+    border: none;
+    font-weight: 600;
+    font-size: 12px;
 }
 
 .dashboard .main .product-info {
@@ -2253,10 +2258,16 @@ fieldset {
 .dashboard .main .product-info .product .main {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin-top: 30px;
     background-color: #1C1C24;
     min-height: auto;
+}
+
+.dashboard .main .product-info .product .main .product-title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 10px;
 }
 
 .dashboard .main .product-info .product .title {
@@ -2264,6 +2275,70 @@ fieldset {
     text-align: center;
     font-weight: 600;
     line-height: 36px;
+}
+
+.dashboard .main .product-info .product .bought-people {
+    margin-top: 14px;
+}
+
+.dashboard .main .bought-people {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 23px;
+}
+
+.dashboard .main .bought-people .nobody-bought {
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    color: #92929D;
+    line-height: 14px;
+    margin-left: 5px;
+}
+
+.dashboard .main .bought-people .bought-people-wrap {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+}
+
+.dashboard .main .bought-people .people {
+    display: flex;
+}
+
+.dashboard .main .bought-people .people .person-bought {
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    position: relative;
+}
+
+.dashboard .main .bought-people .people .person-bought .first-two-char {
+    position: absolute;
+    font-size: 11px;
+    line-height: 11px;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard .main .bought-people .bought-amount {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+
+.dashboard .main .bought-people .bought-amount span {
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    color: #92929D;
+    line-height: 14px;
+    margin-left: 5px;
 }
 
 .dashboard .main .product-info .product .main .actions {
@@ -2393,8 +2468,6 @@ fieldset {
 
 .dashboard .main .product-info .product .general .cost .button {
     width: 20%;
-    background-color: #1E75FF;
-    padding: 10px 0;
     border-radius: 10px;
 }
 
@@ -2407,6 +2480,11 @@ fieldset {
     line-height: 18px;
     display: flex;
     justify-content: center;
+    padding: 10px 0;
+    background-color: #1E75FF;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
 
 .dashboard .main .product-info .info .magazine {
@@ -2502,6 +2580,11 @@ fieldset {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #1C1C24;
+    position: relative;
+    margin-bottom: 130px;
+    padding: 150px 0 20px;
+    border-radius: 10px;
 }
 
 .dashboard .main .product-info .popular-products .popular-product + .popular-product {
@@ -2510,6 +2593,12 @@ fieldset {
 
 .dashboard .main .product-info .popular-products .popular-product .cover {
     width: 90%;
+    position: absolute;
+    top: -40%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 300px;
 }
 
 .dashboard .main .product-info .popular-products .popular-product h3 {
@@ -2538,7 +2627,7 @@ fieldset {
     margin-top: 20px;
 }
 
-.dashboard .main .product-info .popular-products .popular-product .buttons a {
+.dashboard .main .product-info .popular-products .popular-product .buttons .button {
     color: #FAFAFB;
     text-decoration: none;
     background-color: #292932;
@@ -2549,9 +2638,11 @@ fieldset {
     padding: 10px 0;
     font-weight: 600;
     font-size: 12px;
+    border: none;
+    cursor: pointer;
 }
 
-.dashboard .main .product-info .popular-products .popular-product .buttons a:first-of-type {
+.dashboard .main .product-info .popular-products .popular-product .buttons button:first-of-type {
     background-color: #1E75FF;
 }
 
@@ -2559,6 +2650,7 @@ fieldset {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: 180px;
 }
 
 .dashboard .main .subscriptions .container {
