--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -58,12 +58,10 @@
     margin-right: -60px;
 }
 
-/* .slider .slick-slide {
-} */
-
 .popular-products-slider {
     margin-top: 30px;
     padding-bottom: 60px;
+    min-height: 500px;
 }
 
 .popular-products-slider .slick-list {
@@ -95,6 +93,8 @@
 .popular-products-slider .slick-slide {
     padding-top: 100px;
     width: 370px;
+    min-height: 500px;
+    margin-top: 24px;
 }
 
 .popular-products-slider .slick-arrow.slick-prev {
@@ -120,6 +120,7 @@
     right: 0;
     margin: 0 auto;
     height: 300px;
+    width: 100%;
 }
 
 .popular-products-slider .popular-product {
@@ -156,7 +157,7 @@
     justify-content: space-between;
 }
 
-.popular-products-slider .popular-product .buttons a {
+.popular-products-slider .popular-product .buttons .button {
     display: flex;
     justify-content: center;
     font-size: 12px;
@@ -169,12 +170,9 @@
     padding: 10px 0;
     color: #fff;
     font-weight: 600;
+    cursor: pointer;
 }
 
-.popular-products-slider .popular-product .buttons a:first-of-type {
+.popular-products-slider .popular-product .buttons button:first-of-type {
     background-color: #1E75FF;
 }
-
-/* .popular-products-slider .popular-product .buttons a + a {
-    margin-left: 10px;
-} */
