--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -242,6 +242,7 @@ fieldset {
     background-color: #1C1C24;
     border-radius: 20px;
     box-shadow: 0px 0px 20px 5px #000000;
+    transform: translateY(-170%);
 }
 
 .home .forgot-password-modal .heading {
@@ -973,6 +974,7 @@ fieldset {
     z-index: 1;
     height: 370px;
     box-shadow: 0px 0px 20px 5px #141313;
+    transform: translateY(-170%);
 }
 
 .dashboard .password-changed-notif {
@@ -1543,11 +1545,11 @@ fieldset {
     color: #FAFAFB;
 }
 
-.dashboard .main .products .product .buttons a:first-of-type {
+.dashboard .main .products .product .buttons button:first-of-type {
     background-color: #1E75FF;
 }
 
-.dashboard .main .products .product .buttons a {
+.dashboard .main .products .product .buttons .button {
     border-radius: 10px;
     width: 45%;
     padding: 10px 0;
@@ -1556,7 +1558,12 @@ fieldset {
     display: flex;
     justify-content: center;
     color: #FAFAFB;
+    font-family: Roboto, sans-serif;
     line-height: 18px;
+    cursor: pointer;
+    border: none;
+    font-weight: 600;
+    font-size: 12px;
 }
 
 .dashboard .main .product-info {
@@ -1667,10 +1674,16 @@ fieldset {
 .dashboard .main .product-info .product .main {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin-top: 30px;
     background-color: #1C1C24;
     min-height: auto;
+}
+
+.dashboard .main .product-info .product .main .product-title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 10px;
 }
 
 .dashboard .main .product-info .product .title {
@@ -1678,6 +1691,70 @@ fieldset {
     text-align: center;
     font-weight: 600;
     line-height: 36px;
+}
+
+.dashboard .main .product-info .product .bought-people {
+    margin-top: 14px;
+}
+
+.dashboard .main .bought-people {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 23px;
+}
+
+.dashboard .main .bought-people .nobody-bought {
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    color: #92929D;
+    line-height: 14px;
+    margin-left: 5px;
+}
+
+.dashboard .main .bought-people .bought-people-wrap {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+}
+
+.dashboard .main .bought-people .people {
+    display: flex;
+}
+
+.dashboard .main .bought-people .people .person-bought {
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    position: relative;
+}
+
+.dashboard .main .bought-people .people .person-bought .first-two-char {
+    position: absolute;
+    font-size: 11px;
+    line-height: 11px;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard .main .bought-people .bought-amount {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+
+.dashboard .main .bought-people .bought-amount span {
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    color: #92929D;
+    line-height: 14px;
+    margin-left: 5px;
 }
 
 .dashboard .main .product-info .product .main .actions {
@@ -1807,8 +1884,6 @@ fieldset {
 
 .dashboard .main .product-info .product .general .cost .button {
     width: 20%;
-    background-color: #1E75FF;
-    padding: 10px 0;
     border-radius: 10px;
 }
 
@@ -1821,6 +1896,11 @@ fieldset {
     line-height: 18px;
     display: flex;
     justify-content: center;
+    padding: 10px 0;
+    background-color: #1E75FF;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
 
 .dashboard .main .product-info .info .magazine {
@@ -1916,6 +1996,11 @@ fieldset {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #1C1C24;
+    position: relative;
+    margin-bottom: 130px;
+    padding: 150px 0 20px;
+    border-radius: 10px;
 }
 
 .dashboard .main .product-info .popular-products .popular-product + .popular-product {
@@ -1924,6 +2009,12 @@ fieldset {
 
 .dashboard .main .product-info .popular-products .popular-product .cover {
     width: 90%;
+    position: absolute;
+    top: -40%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 300px;
 }
 
 .dashboard .main .product-info .popular-products .popular-product h3 {
@@ -1952,7 +2043,7 @@ fieldset {
     margin-top: 20px;
 }
 
-.dashboard .main .product-info .popular-products .popular-product .buttons a {
+.dashboard .main .product-info .popular-products .popular-product .buttons .button {
     color: #FAFAFB;
     text-decoration: none;
     background-color: #292932;
@@ -1963,9 +2054,11 @@ fieldset {
     padding: 10px 0;
     font-weight: 600;
     font-size: 12px;
+    border: none;
+    cursor: pointer;
 }
 
-.dashboard .main .product-info .popular-products .popular-product .buttons a:first-of-type {
+.dashboard .main .product-info .popular-products .popular-product .buttons button:first-of-type {
     background-color: #1E75FF;
 }
 
@@ -1973,6 +2066,7 @@ fieldset {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: 180px;
 }
 
 .dashboard .main .subscriptions .container {
