--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -65,6 +65,11 @@
 }
 
 .popular-products-slider .slick-list {
+    margin-left: -15px;
+    width: 1170px;
+}
+
+.popular-products-slider .slick-list {
     cursor: grab;
 }
 
@@ -91,8 +96,7 @@
 }
 
 .popular-products-slider .slick-slide {
-    padding-top: 100px;
-    width: 370px;
+    padding-top: 125px;
     min-height: 550px;
     margin-top: 50px;
 }
@@ -115,12 +119,9 @@
 }
 
 .popular-products-slider .slick-slide .cover {
-    bottom: 150px;
-    left: 0;
-    right: 0;
     margin: 0 auto;
-    height: 300px;
-    width: 100%;
+    height: 330px;
+    width: 330px;
 }
 
 .popular-products-slider .popular-product {
@@ -129,7 +130,7 @@
     padding: 15px;
     border-radius: 10px;
     background-color: #1C1C24;
-    width: 370px;
+    min-width: 370px;
     margin: 0 auto;
     max-height: 370px;
     justify-content: flex-end;
