--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -2068,6 +2068,7 @@ fieldset {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding-top: 30px;
 }
 
 .dashboard .main .products .product {
@@ -2080,12 +2081,12 @@ fieldset {
     border-radius: 10px;
     margin: 150px auto 60px auto;
     position: relative;
-    flex-basis: 32%;
+    flex-basis: 31.5%;
 }
 
 .dashboard .main .products .product .cover {
-    width: 90%;
-    height: 300px;
+    width: 330px;
+    height: 330px;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2093,7 +2094,7 @@ fieldset {
     margin: 0 auto;
     right: 0;
     left: 0;
-    top: -150px;
+    top: -180px;
 }
 
 .dashboard .main .products .product .product-title {
