--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -210,6 +210,8 @@
     margin: 0 auto;
     height: 330px;
     width: 330px;
+    border-radius: 10px;
+    border: 3px solid #44444F;
 }
 
 .popular-products-slider .popular-product {
@@ -218,11 +220,12 @@
     padding: 15px;
     border-radius: 10px;
     background-color: #1C1C24;
-    min-width: 370px;
     margin: 0 auto;
     max-height: 370px;
     justify-content: flex-end;
     position: relative;
+    min-width: 370px;
+    max-width: 370px;
 }
 
 .popular-products-slider .slick-slide {
@@ -2095,6 +2098,8 @@ fieldset {
     right: 0;
     left: 0;
     top: -180px;
+    border-radius: 10px;
+    border: 3px solid #44444f;
 }
 
 .dashboard .main .products .product .product-title {
@@ -2162,7 +2167,7 @@ fieldset {
 }
 
 .dashboard .main .product-info .info {
-    width: 770px;
+    width: calc(770px - 15px);
 }
 
 .dashboard .main .product-info .info .general {
@@ -2568,13 +2573,13 @@ fieldset {
 }
 
 .dashboard .main .product-info .popular-products .popular-product {
-    width: 330px;
+    width: 370px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #1C1C24;
     position: relative;
-    margin-bottom: 130px;
+    margin-bottom: 155px;
     padding: 150px 0 20px;
     border-radius: 10px;
 }
@@ -2584,13 +2589,15 @@ fieldset {
 }
 
 .dashboard .main .product-info .popular-products .popular-product .cover {
-    width: 90%;
+    width: 330px;
     position: absolute;
-    top: -40%;
+    top: -170px;
     left: 0;
     right: 0;
     margin: 0 auto;
-    height: 300px;
+    height: 330px;
+    border: 3px solid #44444f;
+    border-radius: 10px;
 }
 
 .dashboard .main .product-info .popular-products .popular-product h3 {
@@ -2674,7 +2681,7 @@ fieldset {
     min-width: 175px;
     height: 175px;
     border-radius: 10px;
-    border: 3px solid #44f;
+    border: 3px solid #44444f;
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content {
